--- a/001.md
+++ b/001.md
@@ -8,7 +8,6 @@
 
   * cin cout不能scanf printf 以空格为分隔符
   * 字符串拼接用+
-  * 
 
 * getline可以输入包含空格的字符串，需引入`#include<string>`
 
@@ -18,8 +17,10 @@
 
 * 函数的引用和传值 传参前加&表示传的是参数的引用，加&才能改变传递的参数
 
-  #### 类的构造函数
+  ![image-20211210191226648](image001/image-20211210191226648.png)
 
+  #### 类的构造函数
+  
   ```c++
   student(int a = 0,int b = 0)
       : a0(a), b0(b)
@@ -33,7 +34,7 @@
   ##### 1. 函数模板
 
   T即为形参，几个形参几个T
-
+  
   ```c++
   template<class T>
       T max(T a,T b)
@@ -43,7 +44,7 @@
   ```
 
   ##### 2.类模板
-
+  
   ```C++
   template<class T>
   class A
@@ -73,13 +74,13 @@
   
 
   ##### 接口
-
+  
   * 静态操作：get  search
   * 动态操作：insert  remove
   * 存储方式：动态、静态
 
   ##### 定义
-
+  
   * 列表运用动态存储
   * 其中的元素为节点
   * 节点由指针联结
@@ -108,19 +109,19 @@
   ##### 插入实现  O(1)
 
   <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912214639957.png" alt="image-20210912214639957" style="zoom:80%;" />
-
+  
   1. 以p为节点，在p的前驱插入数值为e的节点
   2. ->即为调用的意思，相当于p.insertAsPred(e)，即此函数的实现是由insertAsPred接口实现
   3. 先创建一个新的节点，以this的pred为前驱，以this为后继
   4. 将pred的后继改为x，将this的前驱改为x
-
+  
   * 若在插入时this为首节点，存在header头节点
   * <u>前驱后继的改变顺序不能变否则x的succ为自己</u>4.
 
   ##### 复制法构造list O(n)
 
   ![image-20210912215446274](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912215446274.png)
-
+  
   1. 初始化头尾节点
   2. 将p节点的数据插入新建list的末尾，即trailer之前
   3. p节点指向它的后继，继续插入至末尾
@@ -146,7 +147,7 @@
   ##### <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912220714616.png" alt="image-20210912220714616" style="zoom:80%;" />
 
   clear实现：<u>反复删除首元素</u>，即头节点的后继直到size为0，返回删除list的规模
-
+  
   ##### 查找  O(n)
   
   ##### <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912221225593.png" alt="image-20210912221225593" style="zoom:80%;" />
