--- a/001.md
+++ b/001.md
@@ -96,19 +96,19 @@
 
   ##### List模板类
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912212309203.png" alt="image-20210912212309203" style="zoom: 80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912212309203.png" alt="image-20210912212309203" style="zoom: 80%;" />
 
   头尾节点不可见，首末节点可见
 
   ##### 初始化  O(1)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912212525499.png" alt="image-20210912212525499" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912212525499.png" alt="image-20210912212525499" style="zoom:80%;" />
 
   初始化list时，创建头尾节点，且二者互为前驱和后继
 
   ##### 插入实现  O(1)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912214639957.png" alt="image-20210912214639957" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912214639957.png" alt="image-20210912214639957" style="zoom:80%;" />
   
   1. 以p为节点，在p的前驱插入数值为e的节点
   2. ->即为调用的意思，相当于p.insertAsPred(e)，即此函数的实现是由insertAsPred接口实现
@@ -120,7 +120,7 @@
 
   ##### 复制法构造list O(n)
 
-  ![image-20210912215446274](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912215446274.png)
+  ![image-20210912215446274](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912215446274.png)
   
   1. 初始化头尾节点
   2. 将p节点的数据插入新建list的末尾，即trailer之前
@@ -130,7 +130,7 @@
 
   ##### 删除  O(1)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912215823889.png" alt="image-20210912215823889" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912215823889.png" alt="image-20210912215823889" style="zoom:80%;" />
 
   1. 备份待删除的节点
 
@@ -144,18 +144,18 @@
 
   ##### 析构（销毁list）O(n)
 
-  ##### <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912220714616.png" alt="image-20210912220714616" style="zoom:80%;" />
+  ##### <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912220714616.png" alt="image-20210912220714616" style="zoom:80%;" />
 
   clear实现：<u>反复删除首元素</u>，即头节点的后继直到size为0，返回删除list的规模
   
   ##### 查找  O(n)
   
-  ##### <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912221225593.png" alt="image-20210912221225593" style="zoom:80%;" />
+  ##### <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912221225593.png" alt="image-20210912221225593" style="zoom:80%;" />
   
   * 以p为节点，在p的n个前驱中进行查找，与数值e进行比对
   * 若命中，则返回节点p，若失败，返回null
   
-  ![image-20210912221816914](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912221816914.png)
+  ![image-20210912221816914](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912221816914.png)
   
   * 第二个为在以p为节点，n个后继中进行查找
 
@@ -226,22 +226,22 @@
   2. 将数据空间的首地址赋值给elem
   3. 定义向量的大小为0
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915200513222.png" alt="image-20210915200513222" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915200513222.png" alt="image-20210915200513222" style="zoom:80%;" />
 
   * 从已经存在的数组复制，<u>调用内部函数copyFrom</u>
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915200706895.png" alt="image-20210915200706895" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915200706895.png" alt="image-20210915200706895" style="zoom:80%;" />
 
   ##### 析构
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915200732965.png" alt="image-20210915200732965" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915200732965.png" alt="image-20210915200732965" style="zoom:80%;" />
 
   ##### 复制copyFrom
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915201216447.png" alt="image-20210915201216447" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915201216447.png" alt="image-20210915201216447" style="zoom:80%;" />
 
   * A为copyFrom的数组，lo为数组起始位置，**hi为不属于这个数组的第一个元素**
-  * <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915201606109.png" alt="image-20210915201606109" style="zoom:80%;" />
+  * <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915201606109.png" alt="image-20210915201606109" style="zoom:80%;" />
 
   
 
@@ -256,11 +256,11 @@
 
   * 下溢：容量开辟很大，实际大小size很小，则装填因子（空间利用率）很小
 
-    <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915202338599.png" alt="image-20210915202338599" style="zoom:80%;" />
+    <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915202338599.png" alt="image-20210915202338599" style="zoom:80%;" />
 
   ##### 动态空间管理，扩容算法
 
-  ![image-20210915202752789](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915202752789.png)
+  ![image-20210915202752789](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915202752789.png)
 
   * 若A[ ]当前capacity已满，则将A copy至 B[ ] 中，B的容量更大，同时释放A的空间。
     1. 若size==capacity，先将容量空间* oldElem 备份
@@ -270,7 +270,7 @@
 
   ##### 递增扩容策略  O(n<sup>2</sup>)   分摊到n个为O(n)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912205738865.png" alt="image-20210912205738865" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912205738865.png" alt="image-20210912205738865" style="zoom:80%;" />
 
   * 每次扩容i个固定长度
   * 算法即为将上一个扩容算法的空间分配算法的一行代码改变
@@ -279,7 +279,7 @@
 
   ##### 递增扩容策略  O(n)  分摊到n个为O(1)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210912205658417.png" alt="image-20210912205658417" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210912205658417.png" alt="image-20210912205658417" style="zoom:80%;" />
 
   * 每次插入一个元素
 
@@ -299,7 +299,7 @@
 
   ##### 插入
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915211555858.png" alt="image-20210915211555858" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915211555858.png" alt="image-20210915211555858" style="zoom:80%;" />
 
   * 在插入点之后的所有元素后移一位
 
@@ -311,7 +311,7 @@
 
   ##### 区间删除  O(n)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915212222580.png" alt="image-20210915212222580" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915212222580.png" alt="image-20210915212222580" style="zoom:80%;" />
 
   * **删除的区间为左闭右开**，hi并未删除
 
@@ -321,13 +321,13 @@
 
   ##### 单元素删除   O(n)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915213744324.png" alt="image-20210915213744324" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915213744324.png" alt="image-20210915213744324" style="zoom:80%;" />
 
   * 考虑到remove函数删除的是秩为lo到hi-1的元素，则删除单元素只需调用r到r+1-1
 
   ##### 查找
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915214425785.png" alt="image-20210915214425785" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915214425785.png" alt="image-20210915214425785" style="zoom:80%;" />
 
   * **逆序查找**，**当有多个元素相同时返回秩最大的**
 
@@ -339,7 +339,7 @@
   2. 不需要考虑find函数仅能找到秩最大的，去想是否存在比秩最大的还小的秩存在相同元素的问题，**因为是逐个向后find，故相同的元素全部被remove**
 
   * **复杂度**：
-  * <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915222026377.png" alt="image-20210915222026377" style="zoom:80%;" />
+  * <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915222026377.png" alt="image-20210915222026377" style="zoom:80%;" />
 
   1. 复杂度是由while和内部的find remove产生的
   2. while复杂度为O(n
@@ -354,7 +354,7 @@
 * 最底部的元素称为： **底端 bottom**
 * LIFO last in first out
 
-<img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926212812942.png" alt="image-20210926212812942" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926212812942.png" alt="image-20210926212812942" style="zoom:80%;" />
 
 * 操作：
   * push( a )
@@ -365,7 +365,7 @@
 
 ##### 由向量派生的栈
 
-<img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926213443041.png" alt="image-20210926213443041" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926213443041.png" alt="image-20210926213443041" style="zoom:80%;" />
 
 1. 插入、删除都是在**向量末端**进行，故上述所有操作复杂度均为O(1)
 2. 在向量末端而不是前端：若插入与删除发生在向量的前端，则涉及到向量整体的移动，复杂度为O(n)
@@ -374,9 +374,9 @@
 
 1. ##### 进制转换
 
-<img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926214820758.png" alt="image-20210926214820758" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926214820758.png" alt="image-20210926214820758" style="zoom:80%;" />
 
-* 计算顺序是自上而下，而输出顺序为自下而上![image-20210926220743576](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926220743576.png)
+* 计算顺序是自上而下，而输出顺序为自下而上![image-20210926220743576](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926220743576.png)
 
   
 
@@ -385,7 +385,7 @@
   * 概述：判断一个含有多个括号的表达式是否每个左括号都有唯一的右括号与之对应
   * 思路：
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929195252972.png" alt="image-20210929195252972" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929195252972.png" alt="image-20210929195252972" style="zoom:80%;" />
 
   1. 消去表达式中一对**紧邻**的左右括号对表达式无影响
 
@@ -397,7 +397,7 @@
 
   * 实现
 
-    <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929200132000.png" alt="image-20210929200132000" style="zoom:80%;" />
+    <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929200132000.png" alt="image-20210929200132000" style="zoom:80%;" />
 
   * 推广：
 
@@ -492,7 +492,7 @@
 
     ​					一个整数size
 
-    ![image-20210927182843965](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210927182843965.png)
+    ![image-20210927182843965](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210927182843965.png)
 
   * 入队实现
 
@@ -577,12 +577,12 @@
 
     * 若引入一个新的根，将它与多个树的树根连接，则构成一个更大的有根树
 
-      ![image-20210929211147530](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929211147530.png)
+      ![image-20210929211147530](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929211147530.png)
 
       * 组成的各树为**子树**，r为其**父亲**，ri之间互为**兄弟**
       * 任何一个节点**所拥有的孩子数目**称为度数d，顶点的数目n，边的数目e
 
-      ![image-20210929211618949](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929211618949.png)
+      ![image-20210929211618949](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929211618949.png)
 
       即：一个树结构的**所有**边数=所有节点的度数之和=顶点数目-1
 
@@ -616,7 +616,7 @@
 
         
 
-      <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929214256998.png" alt="image-20210929214256998" style="zoom:80%;" />
+      <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929214256998.png" alt="image-20210929214256998" style="zoom:80%;" />
       
       则对任一节点v：depth(v)+height(v)<=height(T) (全树高度)
     
@@ -676,8 +676,8 @@
   * 基于数组方式实现
 
     * 一个数组存储，一个maxsize，一个当前size
-    * ![image-20211027184305509](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20211027184305509.png)  floor为向下取整，即小于等于
-    * siftdown，根节点的左右子树为堆，但整个不为堆![image-20211021140539376](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20211021140539376.png)![image-20211027185447025](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20211027185447025.png)
+    * ![image-20211027184305509](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20211027184305509.png)  floor为向下取整，即小于等于
+    * siftdown，根节点的左右子树为堆，但整个不为堆![image-20211021140539376](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20211021140539376.png)![image-20211027185447025](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20211027185447025.png)
 
     从倒数第二行开始，从右向左，从下往上，
 
@@ -785,13 +785,13 @@ expression ? a : b      若expression为真，则执行a，否则为b
 
 ##### 访问控制
 
-![image-20210926213839999](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926213839999.png)
+![image-20210926213839999](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926213839999.png)
 
 
 
 ##### 继承、派生
 
-![image-20210926213917416](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210926213917416.png)
+![image-20210926213917416](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210926213917416.png)
 
 派生类可以使用父类的所有public与protected方法
 
