--- a/001.md
+++ b/001.md
@@ -164,7 +164,7 @@
 
   ##### 去重  O(n)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210913220003394.png" alt="image-20210913220003394" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210913220003394.png" alt="image-20210913220003394" style="zoom:80%;" />
 
   1. 判断是否为平凡列表
   2. 记录原规模
@@ -180,7 +180,7 @@
 
   ##### 唯一化（去重） O(n)
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915192821494.png" alt="image-20210915192821494" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915192821494.png" alt="image-20210915192821494" style="zoom:80%;" />
 
   1. 指定首节点为p，q为p的后继
   2. 判断p和q的值是否相等，若是，则remove q，若不是，则将q节点变为p节点
@@ -190,7 +190,7 @@
 
   ##### 查找
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915193511874.png" alt="image-20210915193511874" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915193511874.png" alt="image-20210915193511874" style="zoom:80%;" />
 
   1. 查找节点p的n个前驱，值为e
   2. 将p不断迭代为p的前驱，找到小于等于e的节点p
@@ -214,13 +214,13 @@
 
   ##### 封装 模板类
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915195929783.png" alt="image-20210915195929783" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915195929783.png" alt="image-20210915195929783" style="zoom:80%;" />
 
   * **elem为定义的连续的存放数据的空间，空间大小与capacity相同**
 
   ##### 构造
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915200446146.png" alt="image-20210915200446146" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915200446146.png" alt="image-20210915200446146" style="zoom:80%;" />
 
   1. 创建一个容量为c，数据类型为T的**连续的**数据空间
   2. 将数据空间的首地址赋值给elem
@@ -333,7 +333,7 @@
 
   ##### 唯一化
 
-  <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210915220107486.png" alt="image-20210915220107486" style="zoom:80%;" />
+  <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210915220107486.png" alt="image-20210915220107486" style="zoom:80%;" />
 
   1. 从秩为1的元素开始查找，若查找函数的返回值合法即找到，则删除，若不合法，则向后移动
   2. 不需要考虑find函数仅能找到秩最大的，去想是否存在比秩最大的还小的秩存在相同元素的问题，**因为是逐个向后find，故相同的元素全部被remove**
@@ -599,7 +599,7 @@
     * 在图论中可定义为**无环连通图**
     * 树的任一节点v与根之间均存在**唯一路径**  path(v)  判断指标即为路径长度
 
-    <img src="C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20210929213028586.png" alt="image-20210929213028586" style="zoom:50%;" />
+    <img src="https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20210929213028586.png" alt="image-20210929213028586" style="zoom:50%;" />
 
   * 深度、层次
 
@@ -643,7 +643,7 @@
 
     * 深度优先遍历
 
-      * 前序 中序 后序![image-20211009193117290](C:\Users\風船\AppData\Roaming\Typora\typora-user-images\image-20211009193117290.png)
+      * 前序 中序 后序![image-20211009193117290](https://raw.githubusercontent.com/Quyizzx/typora_notes/main/img/image-20211009193117290.png)
 
       递归实现
 
